# mnemara

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  LICENSE.md  README.md  ROADMAP.md  SECURITY.md
.github/: pull_request_template.md
.github/workflows/: benchmark-report.yml  ci.yml
crates/mnemara/: Cargo.toml
crates/mnemara-core/: Cargo.toml  README.md
crates/mnemara-core/src/: config.rs  embedding.rs  error.rs  evaluation.rs  lib.rs  model.rs  query.rs  scorer.rs  store.rs
crates/mnemara-core/tests/: evaluation_corpus.rs
crates/mnemara-ffi/: Cargo.toml  README.md
crates/mnemara-ffi/src/: lib.rs
crates/mnemara-protocol/: Cargo.toml  README.md  build.rs
crates/mnemara-protocol/proto/mnemara/v1/: memory.proto
crates/mnemara-protocol/src/: lib.rs
crates/mnemara-server/: Cargo.toml  README.md
crates/mnemara-server/src/: admission.rs  lib.rs  main.rs  observability.rs
crates/mnemara-server/tests/: admin_traces.rs  grpc_transport.rs  rollout_examples.rs  service_roundtrip.rs
crates/mnemara-store-file/: Cargo.toml  README.md
crates/mnemara-store-file/src/: lib.rs
crates/mnemara-store-file/tests/: changefeed_time_travel.rs  replay_fixtures.rs
crates/mnemara-store-sled/: Cargo.toml  README.md
crates/mnemara-store-sled/benches/: backend_bench.rs
crates/mnemara-store-sled/examples/: publish_benchmarks.rs
crates/mnemara-store-sled/src/: lib.rs
crates/mnemara-store-sled/tests/: changefeed_time_travel.rs  portable_roundtrip.rs  replay_fixtures.rs
crates/mnemara/src/: lib.rs
data/cortex/: mnemara-replay-fixtures.json
data/evaluation/: ranking-corpus-v1.json
docs/: architecture.md  benchmark-methodology.md  benchmark-results.md  crates-io-readme-audit.md  deployment.md  embedded-store-shared-embedder-proposal.md  release-validation.md  user-guide.md
docs/benchmark-artifacts/: benchmark-report-v1.json  benchmark-report-v1.md  synthesis-benchmark-report-v1.json  synthesis-benchmark-report-v1.md
docs/decision-records/: 0001-ranking-defaults.md
scripts/: release-checklist.sh
sdk/javascript/: README.md  index.d.ts  index.js  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/mnemara_http/: __init__.py
sdk/python/tests/: test_client.py
