[workspace]
members = [
	"crates/mnemara",
	"crates/mnemara-core",
	"crates/mnemara-store-file",
	"crates/mnemara-store-sled",
	"crates/mnemara-protocol",
	"crates/mnemara-server",
]
resolver = "3"

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Local-first, explainable AI memory engine for embedded and service-based systems"
repository = "https://github.com/deliberium/mnemara"
homepage = "https://github.com/deliberium/mnemara"
readme = "README.md"
keywords = ["memory", "retrieval", "rag", "grpc", "ai"]
categories = ["database", "data-structures", "api-bindings"]

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sled = "0.34.7"
tokio = { version = "1.52.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.14.5", features = ["transport", "tls-ring"] }
tonic-build = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
