[package]
name = "mnemara-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "mnemara_core"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
