[package]
name = "mnemara-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/mnemara-ffi"

[lib]
name = "mnemara_ffi"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
mnemara-core = { version = "0.4.0", path = "../mnemara-core" }
mnemara-store-sled = { version = "0.4.0", path = "../mnemara-store-sled" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
uuid = { version = "1.23.1", features = ["v4"] }
