[package]
name = "mnemara-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/mnemara-protocol"
build = "build.rs"

[lib]
name = "mnemara_protocol"
path = "src/lib.rs"

[dependencies]
prost.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build.workspace = true
