[package]
name = "mnemara-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "mnemara_server"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
mnemara-core = { version = "0.1.0", path = "../mnemara-core" }
mnemara-protocol = { version = "0.1.0", path = "../mnemara-protocol" }
mnemara-store-sled = { version = "0.1.0", path = "../mnemara-store-sled" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tokio-stream = { version = "0.1", features = ["net"] }

[dev-dependencies]
hyper-util = { version = "0.1", features = ["tokio"] }
rcgen = "0.13"
sled.workspace = true
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
