[package]
name = "mnemara-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/mnemara-server"

[lib]
name = "mnemara_server"
path = "src/lib.rs"

[[bin]]
name = "mnemara-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
mnemara-core = { version = "0.2.1", path = "../mnemara-core" }
mnemara-protocol = { version = "0.2.1", path = "../mnemara-protocol" }
mnemara-store-sled = { version = "0.2.1", path = "../mnemara-store-sled" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tokio-stream = { version = "0.1", features = ["net"] }

[dev-dependencies]
hyper-util = { version = "0.1", features = ["tokio"] }
rcgen = "0.14"
sled.workspace = true
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
