[package]
name = "mnemara-store-file"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/mnemara-store-file"

[lib]
name = "mnemara_store_file"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
mnemara-core = { version = "0.1.0", path = "../mnemara-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid = { version = "1.23.1", features = ["v4"] }
