[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemara-http"
version = "0.3.0"
description = "Dependency-free Python HTTP client for the Mnemara daemon"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Deliberium Group" }]
keywords = ["memory", "retrieval", "mnemara"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/deliberium-group/mnemara"

[tool.setuptools.packages.find]
where = ["."]
include = ["mnemara_http*"]
